--- a/src/views/ModulsUserAdmin/Delete-Update-List/buttonSearch.css
+++ b/src/views/ModulsUserAdmin/Delete-Update-List/buttonSearch.css
@@ -1,5 +1,5 @@
 /*CSS de la clase buttonSearch.*/
-input[type="text"] {
+/*input[type="text"] {
   border: 2px solid #aaa;
   border-radius: 5px;
   padding: 17px;
@@ -12,4 +12,4 @@ input[type="text"] {
 input[type="text"]:focus {
   border-color: #42cfd6;
   box-shadow: 0 0 8px 0 #42cfd6;
-}
+}*/
