Modifico header/Pedidos y agrego Snackbars

--- a/src/views/ModulOrders/Delete/OrderDelete.css
+++ b/src/views/ModulOrders/Delete/OrderDelete.css
@@ -5,3 +5,30 @@ body{
 .botonBuscar{
     margin-left: 15px !important;
 }
+
+/*table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  tr:hover {background-color: #f5f5f5;}
+
+  tr:nth-child(even) {background-color: #f2f2f2;}
+
+  th, td {
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd
+  }
+  td {
+    height: 50px;
+    vertical-align: bottom;
+  }
+
+  th {
+    display: table-cell;
+    vertical-align: inherit;
+    font-weight: bold;
+    text-align: center;
+    background-color: #3fb5a5;
+    color: white;
+  }*/
