Implementando esconder footer cuando un input es clickeado

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,12 @@
 	justify-content: center;
     align-items: center;
 }
+
+.fadeOut{
+     opacity:0;
+     transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
+}
+.fadeIn{
+     opacity:1;
+     transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
+}
